updated network timeout handling